// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DefectDojo enbled should send a post request to the url when fired 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "http://example.com/foo/bar",
      Object {
        "findings": Array [],
        "paylod": Object {
          "@context": "https://schema.org/extensions",
          "@type": "MessageCard",
          "potentialAction": Array [
            Object {
              "@type": "OpenUri",
              "name": "Open DefectDojo",
              "targets": Array [
                Object {
                  "os": "default",
                  "uri": "htps://defect.dojo/",
                },
              ],
            },
            Object {
              "@type": "OpenUri",
              "name": "Show Results in DefectDojo",
              "targets": Array [
                Object {
                  "os": "default",
                  "uri": "https://defect.dojo/project?id=09988cdf-1fc7-4f85-95ee-1b1d65dbc7cc",
                },
              ],
            },
          ],
          "sections": Array [
            Object {
              "activityImage": "https://docs.securecodebox.io/img/Favicon.svg",
              "activitySubtitle": "Finished at undefined",
              "activityTitle": "Scheduled scan: **'demo-scan-1601086432'**",
              "facts": Array [
                Object {
                  "name": "high",
                  "value": "10",
                },
                Object {
                  "name": "medium",
                  "value": "5",
                },
                Object {
                  "name": "low",
                  "value": "2",
                },
                Object {
                  "name": "informational",
                  "value": "1",
                },
              ],
              "startGroup": true,
              "text": "__Findings Severity Overview:__",
            },
            Object {
              "facts": Array [
                Object {
                  "name": "A Client Error response code was returned by the server",
                  "value": "1",
                },
                Object {
                  "name": "Information Disclosure - Sensitive Information in URL",
                  "value": "1",
                },
                Object {
                  "name": "Strict-Transport-Security Header Not Set",
                  "value": "1",
                },
              ],
              "text": "__Findings Category Overview:__",
            },
          ],
          "summary": "Scan 09988cdf-1fc7-4f85-95ee-1b1d65dbc7cc",
          "themeColor": "0078D7",
          "title": "New security scan results (Type: {{scanType}}) are available!",
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Kibana enbled example should send a post request to the url when fired 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "http://example.com/foo/bar",
      Object {
        "findings": Array [],
        "paylod": Object {
          "@context": "https://schema.org/extensions",
          "@type": "MessageCard",
          "potentialAction": Array [
            Object {
              "@type": "OpenUri",
              "name": "Open Kibana Dashboard",
              "targets": Array [
                Object {
                  "os": "default",
                  "uri": "htps://dashboard.yourservice/",
                },
              ],
            },
            Object {
              "@type": "OpenUri",
              "name": "Show Results in Kibana Dashboard",
              "targets": Array [
                Object {
                  "os": "default",
                  "uri": "https://dashboard.yourservice/filter:09988cdf-1fc7-4f85-95ee-1b1d65dbc7cc",
                },
              ],
            },
          ],
          "sections": Array [
            Object {
              "activityImage": "https://docs.securecodebox.io/img/Favicon.svg",
              "activitySubtitle": "Finished at undefined",
              "activityTitle": "Scheduled scan: **'demo-scan-1601086432'**",
              "facts": Array [
                Object {
                  "name": "high",
                  "value": "10",
                },
                Object {
                  "name": "medium",
                  "value": "5",
                },
                Object {
                  "name": "low",
                  "value": "2",
                },
                Object {
                  "name": "informational",
                  "value": "1",
                },
              ],
              "startGroup": true,
              "text": "__Findings Severity Overview:__",
            },
            Object {
              "facts": Array [
                Object {
                  "name": "A Client Error response code was returned by the server",
                  "value": "1",
                },
                Object {
                  "name": "Information Disclosure - Sensitive Information in URL",
                  "value": "1",
                },
                Object {
                  "name": "Strict-Transport-Security Header Not Set",
                  "value": "1",
                },
              ],
              "text": "__Findings Category Overview:__",
            },
          ],
          "summary": "Scan 09988cdf-1fc7-4f85-95ee-1b1d65dbc7cc",
          "themeColor": "0078D7",
          "title": "New security scan results (Type: {{scanType}}) are available!",
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`vulnMngmEnabled ENV Vars missing test should result in a minimal payload 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "http://example.com/foo/bar",
      Object {
        "findings": Array [],
        "paylod": Object {
          "@context": "https://schema.org/extensions",
          "@type": "MessageCard",
          "sections": Array [
            Object {
              "activityImage": "https://docs.securecodebox.io/img/Favicon.svg",
              "activitySubtitle": "Finished at undefined",
              "activityTitle": "Scheduled scan: **'demo-scan-1601086432'**",
              "facts": Array [
                Object {
                  "name": "high",
                  "value": "10",
                },
                Object {
                  "name": "medium",
                  "value": "5",
                },
                Object {
                  "name": "low",
                  "value": "2",
                },
                Object {
                  "name": "informational",
                  "value": "1",
                },
              ],
              "startGroup": true,
              "text": "__Findings Severity Overview:__",
            },
            Object {
              "facts": Array [
                Object {
                  "name": "A Client Error response code was returned by the server",
                  "value": "1",
                },
                Object {
                  "name": "Information Disclosure - Sensitive Information in URL",
                  "value": "1",
                },
                Object {
                  "name": "Strict-Transport-Security Header Not Set",
                  "value": "1",
                },
              ],
              "text": "__Findings Category Overview:__",
            },
          ],
          "summary": "Scan 09988cdf-1fc7-4f85-95ee-1b1d65dbc7cc",
          "themeColor": "0078D7",
          "title": "New security scan results (Type: {{scanType}}) are available!",
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`vulnMngmEnabled disabled should send a post request to the url when fired 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "http://example.com/foo/bar",
      Object {
        "findings": Array [],
        "paylod": Object {
          "@context": "https://schema.org/extensions",
          "@type": "MessageCard",
          "sections": Array [
            Object {
              "activityImage": "https://docs.securecodebox.io/img/Favicon.svg",
              "activitySubtitle": "Finished at undefined",
              "activityTitle": "Scheduled scan: **'demo-scan-1601086432'**",
              "facts": Array [
                Object {
                  "name": "high",
                  "value": "10",
                },
                Object {
                  "name": "medium",
                  "value": "5",
                },
                Object {
                  "name": "low",
                  "value": "2",
                },
                Object {
                  "name": "informational",
                  "value": "1",
                },
              ],
              "startGroup": true,
              "text": "__Findings Severity Overview:__",
            },
            Object {
              "facts": Array [
                Object {
                  "name": "A Client Error response code was returned by the server",
                  "value": "1",
                },
                Object {
                  "name": "Information Disclosure - Sensitive Information in URL",
                  "value": "1",
                },
                Object {
                  "name": "Strict-Transport-Security Header Not Set",
                  "value": "1",
                },
              ],
              "text": "__Findings Category Overview:__",
            },
          ],
          "summary": "Scan 09988cdf-1fc7-4f85-95ee-1b1d65dbc7cc",
          "themeColor": "0078D7",
          "title": "New security scan results (Type: {{scanType}}) are available!",
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
